# imath-traits

./: .gitignore  Cargo.toml  README.md
src/: bound.rs  impl_array.rs  impl_cgmath.rs  impl_glam.rs  impl_nalgebra.rs  impl_nalgebra_glm.rs  lib.rs  matrix.rs  vec.rs  zero.rs
