[package]
name = "imath-traits"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.7.1"

nalgebra = {version = "^0.26", optional = true}
nalgebra-glm = {version = "^0.12", optional = true}
cgmath = {version = "^0.18", optional = true}
