[package]
name = "imath-traits"
version = "0.4.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["graphics", "vfx"]
readme = "README.md"
description = "Utility traits for VFX libraries to be agnostic over the math crates used"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.7.1"

nalgebra = {version = "^0.27", optional = true}
nalgebra-glm = {version = "^0.12", optional = true}
cgmath = {version = "^0.18", optional = true}
glam = {version = "^0.17", optional = true}
